--- a/game/game.scss
+++ b/game/game.scss
@@ -66,7 +66,7 @@
     border: 5px solid purple;
     border-radius: 25px;
 }
-.maxCount{
+.record{
     min-width: 50px;
     height: 30px;
     text-align: center;
