--- a/tabs/registration/registration.module.css
+++ b/tabs/registration/registration.module.css
@@ -9,7 +9,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: linear-gradient(135deg, rgba(40,186,230,1) 9%, rgba(0,255,34,1) 100%);
+    background-image: url('../../public/images/title.jpg');
+    background-position: center center;
+    border-radius: 25px;
+    color: white;
     border-radius: 25px;
 }
 .regContainer{
@@ -27,7 +30,9 @@
     border-radius: 25px;
     font-size: 17px;
     font-weight: 600;
-    background: linear-gradient(315deg, rgba(230,40,40,1) 27%, rgba(255,193,0,1) 65%);
+    background-image: url('../../public/images/btnSend.png');
+    background-position: center center;
+    background-size: 50% 50%;
 }
 .btnSend:hover{
     transition: 0.5s;
