--- a/tabs/signIn/signIn.module.css
+++ b/tabs/signIn/signIn.module.css
@@ -9,8 +9,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: linear-gradient(135deg, rgba(40,186,230,1) 9%, rgba(0,255,34,1) 100%);
+    background-image: url('../../public/images/title.jpg');
+    background-position: center center;
     border-radius: 25px;
+    color: white;
 }
 .signInContainer{
     width: 100%;
@@ -21,13 +23,16 @@
     align-items: center;
 }
 .btnSend{
+    color: white;
     transition: 0.5s;
     width: 100px;
     height: 50px;
     border-radius: 25px;
     font-size: 17px;
     font-weight: 600;
-    background: linear-gradient(315deg, rgba(230,40,40,1) 27%, rgba(255,193,0,1) 65%);
+    background-image: url('../../public/images/btnSend.png');
+    background-position: center center;
+    background-size: 50% 50%;
 }
 .btnSend:hover{
     transition: 0.5s;
