--- a/game/game.scss
+++ b/game/game.scss
@@ -15,7 +15,6 @@
     align-items: center;
 }
 .game{
-    margin: 0 0 0 35%;
 
     border-radius: 25px;
     border: 10px double brown;
@@ -65,6 +64,14 @@
 .btnRestart{
     background-color: blue;
     color: white;
+}
+
+.countContainer{
+    min-width: 50px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .count{
     min-width: 50px;
