--- a/game/game.scss
+++ b/game/game.scss
@@ -14,7 +14,7 @@
     justify-content: space-between;
     align-items: center;
 }
-.game{
+.gameField{
 
     border-radius: 25px;
     border: 10px double brown;
