--- a/game/game.scss
+++ b/game/game.scss
@@ -9,8 +9,9 @@
 
 }
 .gameContainer{
+    margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -130,7 +131,7 @@
     background-size: 100px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 960px) {
     .gameContainer{
         flex-direction: column;
     }
@@ -139,5 +140,24 @@
     }
     .navControl{
         width: 450px;
+    }
+    
+}
+@media screen and (max-height:895px) and (max-width: 719px) {
+    .gameContainer{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .gameField{
+        margin: 0 auto;
+    }
+    .count{
+        margin: 2px 20px;
+    }
+    .record{
+        margin: 2px 20px;
+    }
+    .navControl{
+        margin: 0 auto;
     }
 }
