--- a/game/game.scss
+++ b/game/game.scss
@@ -67,6 +67,13 @@
     background-color: blue;
     color: white;
 }
+.btnDifficultyLevel{
+    background-color: blue;
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
 .countContainer{
     min-width: 50px;
