--- a/game/dialogOfLoss.module.css
+++ b/game/dialogOfLoss.module.css
@@ -37,3 +37,8 @@
     color: white;
     transition: 0.3s;
 }
+@media screen and (max-width: 525px) {
+    .text{
+        font-size: 70px;
+    }
+}
