--- a/game/game.scss
+++ b/game/game.scss
@@ -139,6 +139,11 @@
     background-size: 100px;
 }
 
+.dialogOfLoss{
+    padding: 0;
+    border-radius: 25px;
+    border: none;
+}
 @media screen and (max-width: 960px) {
     .gameContainer{
         flex-direction: column;
