--- a/game/game.scss
+++ b/game/game.scss
@@ -35,14 +35,39 @@
     height: 20px; */
     border: 1px solid black;
 }
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 250px;
-    height: 60px;
-}
-.nav button{
+// .nav{
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-around;
+//     width: 250px;
+//     height: 60px;
+// }
+// .nav button{
+//     transition: 0.5s;
+//     width: 100px;
+//     height: 50px;
+//     border-radius: 25px;
+//     font-family: lemon;
+//     font-size: 17px;
+//     font-weight: 600;
+// }
+// .nav button:hover{
+//     transform: scale(1.2);
+//     transition: 0.5s;
+// }
+// .nav button:active{
+//     background-color: black;
+//     color: white;
+//     transition: 0.3s;
+// }
+// .btnStartStop{
+//     background-color: red;
+// }
+// .btnRestart{
+//     background-color: blue;
+//     color: white;
+// }
+.btnPause{
     transition: 0.5s;
     width: 100px;
     height: 50px;
@@ -50,31 +75,27 @@
     font-family: lemon;
     font-size: 17px;
     font-weight: 600;
+
+    align-self: flex-start;
+    background-color: blue;
+    color: white;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
 }
-.nav button:hover{
+.btnPause:hover{
     transform: scale(1.2);
     transition: 0.5s;
 }
-.nav button:active{
+.btnPause:active{
     background-color: black;
     color: white;
     transition: 0.3s;
 }
-.btnStartStop{
-    background-color: red;
+.dialogOfPause{
+    padding: 0;
+    border-radius: 25px;
 }
-.btnRestart{
-    background-color: blue;
-    color: white;
-}
-.btnDifficultyLevel{
-    background-color: blue;
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
 .countContainer{
     min-width: 50px;
 
